--- a/config/database.yml
+++ b/config/database.yml
@@ -29,10 +29,10 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  username: postgres
+  username: osinakayah
 
   # The password associated with the postgres role (username).
-  password: iluminat128
+  password: root
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -60,8 +60,8 @@ test:
   database: SIMPLE-KITTENS_test
   host: localhost
   port: 5432
-  username: postgres
-  password: iluminat128
+  username: osinakayah
+  password: root
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
